# Build-var-Spoof

./: .gitattributes  README.md  build.gradle.kts  settings.gradle.kts
.github/workflows/: build.yml  post.py
gradle/: libs.versions.toml
module/: build.gradle.kts
module/src/main/cpp/: CMakeLists.txt
module/src/main/cpp/logging/include/: logging.hpp
module/src/main/cpp/zygisk/: main.cpp
module/template/: customize.sh
